<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AGPLI</string>
    <string name="action_settings">Settings</string>
    
    <string name="map_key">0Tp7WsIDiyqoDmSF9LMprvDzte-hj_A6r-qxbow</string>
            
    <string name="banner_tickets">Tickets</string>
  
    <string name="user_name">User Name: </string>
    <string name="password">Password: </string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="status">Status bar</string>
    <string name="user">User: </string>
    
     <string name="visit">Visits</string>
     <string name="url">URL</string>
    
    <string name="license">Copyright &#169; Jose Alberto Navas Guerrero\nSource code licensed by G0PLv3 (http://www.gnu.org/licenses/). Free Software!</string>

</resources>