<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="20dip"
        android:text="@string/banner_tickets"
        android:textSize="20dip"
        android:textStyle="bold|italic"
        android:color="#FFFFFF" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/android:list"
        android:layout_alignRight="@+id/android:list"
        android:gravity="right"
        android:paddingBottom="20dip"
        android:text="@string/user"
        android:textSize="15dip"
        android:textStyle="italic"
        android:color="#FFFFFF" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/tvUser"
        android:src="@drawable/sad_robot" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tvBanner" />

    <TextView
        android:id="@+id/tvStatusBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/android:list"
        android:paddingTop="20dip"
        android:text="@string/status"
        android:textColor="#000000"
        android:textSize="10sp"
        android:color="#FFFFFF" />

</RelativeLayout>